--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -21,24 +21,22 @@
           <h4>California, Arizona...</h4>
           <ul class="popover">
             <li>
-              <h2>California:</h2>
-              <ul>
-                <li>San Francisco</li>
-                <li>Los Altos</li>
-              </ul>
-            </li>
-            <li>
-              <h2>Arizona:</h2>
-              <ul>
-                <li>page</li>
-                <li>page2</li>
+				<h2>Arizona:</h2>
+				<ul>
+					<li>page</li>
+                	<li>page2</li>
+				</ul>
+				<h2>California:</h2>
+				<ul>
+                	<li>San Francisco</li>
+                	<li>Los ALtos</li>
               </ul>
             </li>
           </ul>
         </div>
         <div class="amenities">
           <h3>Amenities</h3>
-          <h4>Laundry, Internet...</h4>
+          <h4>Internet, Kitchen...</h4>
           <ul class="popover">
 			  <li>Internet</li>
 			  <li>TV</li>
