Fixing syntax of index files with tidy tool from jsfiddle

--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles/4-common.css">
@@ -9,6 +10,7 @@
     <link rel="icon" href="images/icon.png" type="image/png">
     <title>AirBnb Clone</title>
   </head>
+
   <body>
     <header>
       <div class="logo">
@@ -27,4 +29,6 @@
       </p>
     </footer>
   </body>
-</html>
+
+</html
+
