--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -92,6 +92,13 @@
 			  <li>Pets friendly</li>
 		  </ul>
           </div>
+		   <div class="Reviews">
+            <h2>Reviews</h2>
+					<h3>From Bob Dylan the 27th January 2021</h3>
+					<p>Cary is an extraordinary host, he made sure we felt at home! 5 stars!!</p>
+					<h3>From Connor the 4th January 2021</h3>
+					<p>Highly recomended!</p>
+          </div>
         </article>
         <article>
           <h2>Tiny house</h2>
@@ -127,6 +134,13 @@
 		  <ul>
 			  <li>Pets friendly</li>
 		  </ul>
+          </div>
+		   <div class="Reviews">
+            <h2>Reviews</h2>
+					<h3>From Max the 15th January 2021</h3>
+					<p>Fantastic place! It was cleanand everything went super smooth!
+						Location is also great for astaycation, I would suggest a car or Uber
+						so you can get to the city. Other than tha everything was perfect!</p>
           </div>
         </article>
         <article>
@@ -171,6 +185,12 @@
 			  <li>Pool</li>
 			  <li>AC</li>
 		  </ul>
+		  <div class="Reviews">
+            <h2>Reviews</h2>
+					<h3>From Victor Reyes the 27th January 2021</h3>
+					<p>The Cross Mansion is everything you dream and more! It was just a dream
+						vacation! Definetly would recomend!!</p>
+          </div>
           </div>
         </article>
       </section>
